@@ -1,3 +1,8 @@
+ieatacid (12/25/09)
+-----------------
+- Fixed buffStruct and newZoneStruct
+- Added weapons2d.h to automake
+
 ieatacid (12/20/09)
 -----------------
 - Updated version to 5.13.9
